--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:ital@0;1&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="styles.css"/>
+        <link rel="stylesheet" href="styles2.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"/>
 
     </head>
